Titulo da PAGINA

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <body>
-            
+            <h1> Projeto Thiago Alves git </h1>
         </body>
     </head>
 </html>
